#165596319 implement reset password functionality (#37)
* feat: implement reset password

- Install pug templating engine.
- Create alter_user_table migration file to add
  resettoken and resetexpire columns.
- Write test for reset routes.
- create mail templates for reset password.
- use pug as express template engin and create views for password reset
- create controller and validator scripts for each route.
- Add documentation for routes.

[Delivers #165596319]
