# server/models/User.js
@@ -35,6 +35,41 @@ class User extends Model {
             .send();
     }
 
+    async createResetLink() {
+        const token = crypto.randomBytes(20).toString('hex');
+        const date = new Date();
+        date.setHours(date.getHours() + 2);
+
+        await this.constructor
+            .knex()
+            .table('users')
+            .where('email', this.email)
+            .update({
+                resettoken: token,
+                resetexpire: date
+            });
+        await this.sendResetEmail(token);
+    }
+
+    async sendResetEmail(token) {
+        await new Mail('reset-password')
+            .to(this.email)
+            .subject('You requested for a password reset.')
+            .data({
+                name: this.firstName,
+                url: `${config.server.url}/api/v1/auth/reset/${token}`
+            })
+            .send();
+    }
+
+    async resetPassword(password) {
+        await this.$query().patch({
+            password: bcrypt.hashSync(password),
+            resettoken: null,
+            resetexpire: null
+        });
+    }
+
     async sendInviteMail({ name, rawPassword }) {
         await new Mail('invite-mail')
             .to(this.email, this.firstName)
