# server/routes/v1/auth.js
@@ -1,18 +1,29 @@
 import express from 'express';
-import Validator from '@validators/authValidator';
+import authValidator from '@validators/authValidator';
 import authController from '@controllers/authController';
 import Auth from '@middleware/auth/authenticate';
 
 const router = express.Router();
 
-router.post('/signup', Validator.signUp, authController.signUp);
+router.post('/signup', authValidator.signUp, authController.signUp);
 router.post('/verify/:verificationCode', authController.verifyEmail);
 router.post(
     '/create-user',
     Auth.isAuthenticated,
     Auth.isSuperAdmin,
-    Validator.createUser,
+    authValidator.createUser,
     authController.createUser
+);
+
+router.post(
+    '/reset',
+    authValidator.sendResetLink,
+    authController.sendResetLink
+);
+router.patch(
+    '/reset',
+    authValidator.resetPassword,
+    authController.resetPassword
 );
 
 export default router;
